@@ -1,3 +1,8 @@
+2001-10-30 Andreas Andersson (e92_aan@e.kth.se)
+
+	* src/drill.c, src/gerber.h, src/gerber.c
+	  Moved new_image() to the correct place
+
 2001-10-28 Andreas Andersson (e92_aan@e.kth.se)
 
 	* src/Makefile.am
